Current development version (bugfix branch for version 1)
===========================

* Minor other fixes


Version 1.2 (17 Apr 2012)
=========================

* Bugfix: program sometimes hung or crashed when generating a move
  in early game Trigon positions especially when there were no legal
  moves with any of the large pieces
* Bugfix: file modified marker was not set on certain changes
  (Make Main Variation, comment changed)
* Bugfix: game info dialog showed wrong player labels in Trigon
  and Trigon Three-Player
* Minor other bugfixes in the code
* Reverted the change that used the SVG icon for setting the
  window icon because it created an unwanted dependency on the
  Qt SVG plugin.
* Made Save menu item and tool button active if game is modified even
  if no file name is associated with the current game
* Made the code compile without warnings with GCC -Wunused
* Made "make post-install" continue even if some commands fail.


Version 1.1 (10 Mar 2012)
=========================

* File is now immediately visible in Recent Files menu after saving
  under a new name.
* Fixed several cases where the program crashed instead of showing an
  error message if the opened file was invalid. The error message
  now also has a Show Details button to show the reason why the file
  could not be loaded.
* Fixed a bug that distorted the position values reported with
  --verbose if a subtree from a previous search was reused
* Fixed exception in tools/twogtp/analyze.py if option -r was used
* Minor fixes in computer player engine
* Added explaining label to computer color dialog because window
  title is not visible in all L&F's
* Accept pass moves (empty value) in files. Although the current
  Blokus SGF documentation does not specify if they should be allowed,
  they might be used in the future and are used in files written by
  early (unreleased) versions of Pentobi
* Extended the file format documentation by a hint how to put blksgf
  files on web servers