@@ -93,10 +93,16 @@ public:
     static const unsigned int max_pieces = BoardConst::max_pieces;
 
     /** Maximum number of moves for a player in a game.
-        Assumes that a player is only allowed to pass if she has no legal
-        moves and allows an extra pass move per player at the end of a game to
-        indicate that the game is over. */
-    static const unsigned int max_player_moves = max_pieces + 1;
+        Assumes that pass moves are only played in the search and the search
+        uses alternating move sequences plus one extra pass move per color at
+        the end of a game to indicate that the game is over. The case with the
+        maximum moves is reached if a color plays all its pieces in a
+        non-alternating move sequence on the board and then a search starts,
+        which allows pass moves if a color has no more moves but uses only
+        alternating move sequences. Then the color that has already played all
+        its pieces will always pass and the other color(s) can play ar
+        maximum max_pieces moves. */
+    static const unsigned int max_player_moves = 2 * max_pieces + 1;
 
     static const unsigned int max_game_moves = Color::range * max_player_moves;
 
